src/objects/Milestone_Performance__c.object
<CustomObject>
    <description>This object&apos;s records allow reporting to track performance. The records of this object will be attached to a case and case owners</description>
    <fields>
        <fullName>ActualMilestoneCompletionDateTime__c</fullName>
        <description>Actual milestone completion date (in date/time format)</description>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ActualMilestoneMinutestoComplete__c</fullName>
        <description>Current milestone&apos;s completion date - previous milestone&apos;s completion date</description>
        <label>Completion Minutes</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Looks up the associated Case Number this Milestone Performance Record references</description>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Milestone Performance</relationshipLabel>
        <relationshipName>Milestone_Performance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseOwnershipEndDateTime__c</fullName>
        <label>Case Ownership End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CaseOwnershipStartDateTime__c</fullName>
        <label>Case Ownership Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CaseStatus__c</fullName>
        <label>Case Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Shadow__c</fullName>
        <label>Case Owner Shadow</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <label>Case Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owners_Role__c</fullName>
        <label>Case Owner&apos;s Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompletionTimeDifferenceMinutes__c</fullName>
        <description>Calculated Field of Actual Milestone Minutes to Complete - Planned Milestone Minutes to Complete</description>
        <label>Variance</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completion_Time_DDD_HH_MM__c</fullName>
        <label>Completion Time (DDD:HH:MM)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MilestoneName__c</fullName>
        <label>Milestone</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MilestoneStartDateTime__c</fullName>
        <description>Milestone&apos;s Start date and time</description>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PlannedMilestoneCompletionDateTime__c</fullName>
        <description>Planned Milestone completion date (in date/time format)</description>
        <label>Target Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PlannedMilestoneMinutestoComplete__c</fullName>
        <description>Current Milestone&apos;s minutes to complete - previous milestone&apos;s minutes to complete</description>
        <label>Target Minutes</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Time_DDD_HH_MM__c</fullName>
        <label>Target Time (DDD:HH:MM)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variance_Time_DDD_HH_MM__c</fullName>
        <label>Variance Time (DDD:HH:MM)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Milestone Performance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MPN - {00000000}</displayFormat>
        <label>Milestone Performance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestone Performance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>